--- a/diceGame.html
+++ b/diceGame.html
@@ -6,10 +6,10 @@
   <link rel="stylesheet" href="style.css">
   <title>Dice Game &#127922;</title>
   <script type="text/javascript">
-  /*	if (navigator.userAgent.indexOf('Chrome') >= 0) 
+  	if (navigator.userAgent.indexOf('Chrome') >= 0) 
 {
-    window.location.replace("../diceGame_C/diceGame.html");
-}*/
+    window.location.replace("diceGameChrome.html");
+}
 
 
        
@@ -17,7 +17,7 @@
 </head>
 
 <body onload="roll()">
-<audio src="https://www.bensound.com/bensound-music/bensound-moose.mp3" autoplay ></audio>
+
 
   <div class="container">
     <div class="square" id="first">
@@ -36,13 +36,6 @@
     </div>
   <script type="text/javascript" src="diceGame.js">
 
-  </script>
-  <script type="text/javascript">
-    window.addEventListener("DOMContentLoaded", event => {
-  const audio = document.querySelector("audio");
-  audio.volume = 0.8;
-  audio.play();
-});
   </script>
 </body>
 
