--- a/diceGameC.html
+++ b/diceGameC.html
@@ -26,7 +26,7 @@
       <p id="resultTextP2"></p>
     </div>
       <button type="button" name="button" id="sound" onclick="playAudio()"><i class='fas fa-volume-mute'></i></button>
-  <script type="text/javascript" src="diceGame.js">
+  <script type="text/javascript" src="diceGameC.js">
 
   </script>
 </body>
