--- a/index2.html
+++ b/index2.html
@@ -10,6 +10,7 @@
       data-auto-a11y="true"
     ></script>
 <script src="jquery-3.5.1.min.js"></script>
+	<script>alert('test');</script>
 <style>
     .counter-btn {
         background-color: #0076ff;
